--- a/css/style.css
+++ b/css/style.css
@@ -7,19 +7,26 @@ Dark green: hsla(160,64%,43%,1)
 
 */
 
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
 }
+
+:root {
+  font-size: 62.5%;
+}
+
 
 body {
   font-family: 'Lato', sans-serif;
   font-weight: normal;
-  font-size: 16px;
   line-height: 1.7;
   color: #777;
-  padding: 30px;
+  padding: 3rem;
+  box-sizing: border-box;
 }
 
 .header {
@@ -38,8 +45,12 @@ body {
 
 .logo-box {
   position: absolute;
-  top: 40px;
-  left: 40px;
+  top: 4rem;
+  left: 4rem;
+}
+
+.logo {
+  height: 3.5rem;
 }
 
 .text-box {
@@ -56,22 +67,22 @@ body {
   text-transform: uppercase;
 
   backface-visibility: hidden;
-  margin-bottom: 60px;
+  margin-bottom: 6rem;
 }
 
 .heading-primary-main {
   display: block;
-  font-size: 60px;
+  font-size: 6rem;
   font-weight: 400;
-  letter-spacing: 35px;
+  letter-spacing: 3.5rem;
   animation: moveInLeft 1s ease-out;
 }
 
 .heading-primary-sub {
   display: block;
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 700;
-  letter-spacing: 17px;
+  letter-spacing: 1.7rem;
   animation: moveInRight 1s ease-out;
 }
 
@@ -82,7 +93,7 @@ body {
   }
 
   80% {
-    transform: translateX(10px);
+    transform: translateX(1rem);
   }
 
   100% {
@@ -94,11 +105,11 @@ body {
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(100px);
+    transform: translateX(10rem);
   }
 
   80% {
-    transform: translateX(-10px);
+    transform: translateX(-1rem);
   }
 
   100% {
@@ -110,7 +121,7 @@ body {
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(30px);
+    transform: translateY(3rem);
   }
 
   100% {
@@ -123,25 +134,27 @@ body {
 .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
-  border-radius: 100px;
+  padding: 1.5rem 4rem;
+  border-radius: 10rem;
   transition: all 0.2s ease-out;
   position: relative;
+  font-size: 1.6rem;
 }
 
 .btn:hover {
   transform: translateY(-3px);
-  box-shadow: 0 10px 20px hsla(0, 0%, 0%, 0.2);
+  box-shadow: 0 1rem 2rem hsla(0, 0%, 0%, 0.2);
 }
 
 .btn:active {
   transform: translateY(-1px);
-  box-shadow: 0 5px 10px hsla(0, 0%, 0%, 0.2);
+  box-shadow: 0 .5rem 1rem hsla(0, 0%, 0%, 0.2);
 }
 
 .btn-white {
   color: #777777;
   background-color: white;
-  padding: 15px 40px;
+  padding: 1.5rem 4rem;
   display: inline-block;
 }
 
