--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -3,4 +3,22 @@
   padding: 25rem 0;
   margin-top: -20vh;
 
+
+}
+
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(
+                  to right bottom,
+                  hsla(111, 55%, 64%, 0.8),
+                  hsla(160, 64%, 43%, 0.8)),
+  url("../img/nat-4.jpg");
+  background-size: cover;
+
+  transform: skewY(-7deg);
+  margin-top: -10rem;
+
+  & > * {
+    transform: skewY(7deg);
+  }
 }
