--- a/styles/base/_utilities.scss
+++ b/styles/base/_utilities.scss
@@ -1,9 +1,12 @@
 .u-center-text {
-  text-align: center;
+  text-align: center !important;
 }
 
-.mt-lg { margin-top: 8rem; }
-.mt-xl { margin-top: 10rem; }
-.mb-sm { margin-bottom: 1.5rem;}
-.mb-md { margin-bottom: 4rem;}
-.mb-lg { margin-bottom: 8rem;}
+.mt-lg { margin-top: 8rem !important; }
+.mt-xl { margin-top: 10rem !important; }
+.mt-md { margin-bottom: 4rem !important;}
+.mt-sm { margin-bottom: 1.5rem !important;}
+
+.mb-sm { margin-bottom: 1.5rem !important;}
+.mb-md { margin-bottom: 4rem !important;}
+.mb-lg { margin-bottom: 8rem !important;}
