--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -1,18 +1,24 @@
 .btn {
+  &,
   &:link,
   &:visited {
     text-transform: uppercase;
     text-decoration: none;
     padding: 1.5rem 4rem;
+    display: inline-block;
     border-radius: 10rem;
-    transition: all 0.2s ease-out;
+    transition: all .2s;
     position: relative;
-    font-size: 1.6rem;
+    font-size: $default-font-size;
+
+    //Change for the <button> element
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
     transform: translateY(-3px);
-    box-shadow: 0 1rem 2rem hsla(0, 0%, 0%, 0.2);
+    box-shadow: 0 1rem 2rem rgba($color-black,.2);
 
     &::after {
       transform: scaleX(1.4) scaleY(1.6);
@@ -20,17 +26,37 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-1px);
-    box-shadow: 0 .5rem 1rem hsla(0, 0%, 0%, 0.2);
+    box-shadow: 0 .5rem 1rem rgba($color-black,.2);
+  }
+
+  &--white {
+    background-color: $color-white;
+    color: $color-grey-dark;
+
+    &::after {
+      background-color: $color-white;
+    }
+  }
+
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
   }
 
   &::after {
-    content: '';
+    content: "";
     display: inline-block;
     height: 100%;
     width: 100%;
-    border-radius: 100px;
+    border-radius: 10rem;
     position: absolute;
     top: 0;
     left: 0;
@@ -38,19 +64,8 @@
     transition: all .4s;
   }
 
-  &-white {
-    color: #777777;
-    background-color: white;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-
-    &::after {
-      background-color: white;
-    }
-  }
-
-  &-animated {
-    animation: moveInBottom .5s ease-out;
+  &--animated {
+    animation: moveInBottom .5s ease-out .75s;
     animation-fill-mode: backwards;
   }
 }
@@ -71,18 +86,11 @@
     background-color: $color-primary;
     color: $color-white;
     box-shadow: 0 1rem 2rem rgba($color-black, .15);
-    transform: translateX(-2px);
+    transform: translateY(-2px);
   }
 
   &:active {
     box-shadow: 0 .5rem 1rem rgba($color-black, .15);
-    transform: translateX(0);
+    transform: translateY(0);
   }
-
 }
-
-
-
-
-
-
