--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -14,7 +14,7 @@
     left: 0;
     width: 100%;
     backface-visibility: hidden;
-    border-radius: 3px;
+    border-radius: $border-radius-sm;
     overflow: hidden;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 
@@ -54,8 +54,8 @@
     height: 23rem;
     background-blend-mode: screen;
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
+    border-top-left-radius: $border-radius-sm;
+    border-top-right-radius: $border-radius-sm;
 
     &--1 {
       background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark),
