--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -33,7 +33,7 @@
     box-shadow: 0 .5rem 1rem rgba($color-black,.2);
   }
 
-  &--white {
+  &-white {
     background-color: $color-white;
     color: $color-grey-dark;
 
@@ -42,7 +42,7 @@
     }
   }
 
-  &--green {
+  &-green {
     background-color: $color-primary;
     color: $color-white;
 
@@ -64,7 +64,7 @@
     transition: all .4s;
   }
 
-  &--animated {
+  &-animated {
     animation: moveInBottom .5s ease-out .75s;
     animation-fill-mode: backwards;
   }
