--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -6,11 +6,28 @@
   box-sizing: inherit;
 }
 
-:root {
+html {
   // This defines size of 1rem
   font-size: 62.5%;
+
+  @include respond(phone) {
+    font-size: 50%;
+  }
+
+  @include respond(tab-port) {
+    font-size: 60%;
+  }
+
+  @include respond(tab-land) {
+    font-size: 70%;
+  }
+
+  @include respond(big-desktop) {
+    font-size: 80%;
+  }
 }
 
 body {
   box-sizing: border-box;
 }
+
